[package]
authors = ["Shengtuo Hu <h1994st@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
description = "A tool to build whole-program LLVM bitcode files"
edition = "2021"
exclude = [
  "tests/*",
  ".github/*",
  "Cargo.lock",
]
keywords = ["llvm", "clang", "bitcode", "IR", "gllvm"]
license = "GPL-3.0"
license-file = "LICENSE"
name = "rllvm"
readme = "README.md"
repository = "https://github.com/h1994st/rllvm"
version = "0.1.4"

[dependencies]
clap = {version = "~4.5.23", features = ["derive"]}
confy = "~0.6.1"
log = "~0.4.22"
object = {version = "~0.36.5", features = ["all"]}
regex = "~1.11.1"
serde = {version = "~1.0.216", features = ["derive"]}
simple_logger = "~5.0.0"
which = "~7.0.0"

[target.'cfg(target_vendor = "apple")'.dependencies]
glob = "~0.3.1"

[[bin]]
name = "rllvm-cc"
path = "src/bin/rllvm_cc.rs"

[[bin]]
name = "rllvm-cxx"
path = "src/bin/rllvm_cxx.rs"

[[bin]]
name = "rllvm-get-bc"
path = "src/bin/rllvm_get_bc.rs"

[profile.dist]
inherits = "release"
lto = "thin"
