[package]
authors = ["Shengtuo Hu <h1994st@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
description = "A tool to build whole-program LLVM bitcode files"
edition = "2024"
rust-version = "1.85"
exclude = [
  "tests/*",
  ".github/*",
  "Cargo.lock",
]
keywords = ["llvm", "clang", "bitcode", "IR", "gllvm"]
license = "GPL-3.0"
license-file = "LICENSE"
name = "rllvm"
readme = "README.md"
repository = "https://github.com/h1994st/rllvm"
version = "0.1.6"

[dependencies]
clap = {version = "~4.5.48", features = ["derive"]}
confy = "~1.0.0"
log = "~0.4.28"
object = {version = "~0.37.3", features = ["all"]}
regex = "~1.11.3"
serde = {version = "~1.0.227", features = ["derive"]}
simple_logger = "~5.0.0"
thiserror = "~2.0"
which = "~8.0.0"

[target.'cfg(target_vendor = "apple")'.dependencies]
glob = "~0.3.3"

[[bin]]
name = "rllvm-cc"
path = "src/bin/rllvm_cc.rs"

[[bin]]
name = "rllvm-cxx"
path = "src/bin/rllvm_cxx.rs"

[[bin]]
name = "rllvm-get-bc"
path = "src/bin/rllvm_get_bc.rs"

[dev-dependencies]
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"
